# crossterm-pasts

./: Cargo.toml  README.md
src/: main.rs
